AC_PREREQ([2.69])

AC_INIT([mlockall-anything], [0.1], [https://github.com/aartamonau/authinfo/issues])
AM_INIT_AUTOMAKE([subdir-objects])
LT_INIT([shared disable-static])

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([src/mlockall.c])
AC_CONFIG_FILES([Makefile mlockall])

AC_PROG_CC

AC_DEFINE_DIR([LIBDIR], [libdir])

AC_OUTPUT
